manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thanos-deployment
  namespace: thanos
  labels:
    app: thanos-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thanos-app
  template:
    metadata:
      labels:
        app: thanos-app
    spec:
      containers:
      - name: thanos
        image: gedharizka/thanos:latest
        ports:
        - containerPort: 80
