manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-service
  namespace: thanos
  labels:
    app: thanos-app
spec:
  selector:
    app: thanos-app
  ports:
  - protocol: TCP
    port: 80         # Port yang digunakan di dalam cluster
    targetPort: 80   # Port pada container
  type: ClusterIP     # Gunakan NodePort atau LoadBalancer jika ingin akses dari luar
