manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-ingress
  namespace: thanos
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
  - host: thanos.gedha.web.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thanos-service
            port:
              number: 80
